Código Java - prueba

--- a/Desarrollo/SVCE/codigo/SVCE-java/nbproject/project.properties
+++ b/Desarrollo/SVCE/codigo/SVCE-java/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SVCE-java
-main.class=svce.java.SVCEJava
+main.class=clases.SVCEJava
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
