--- a/Desarrollo/SVCE/Codigo/SGC/nbproject/project.properties
+++ b/Desarrollo/SVCE/Codigo/SGC/nbproject/project.properties
@@ -31,10 +31,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/GCS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.edisoncorSX.jar=edisoncorSX.jar
+file.reference.mysql-connector-java-8.0.25.jar=mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.edisoncorSX.jar}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
